multi-cluster-gateway/multi-cluster-gateway-xlb-basic/config-cluster/route.yaml
kind: HTTPRoute
apiVersion: networking.x-k8s.io/v1alpha1
metadata:
  name: store-route
  namespace: store
  labels:
    gateway: multi-cluster-gateway
spec:
  rules:
  - forwardTo:
    - backendRef: 
        group: net.gke.io
        kind: ServiceImport
        name: store-v1
      port: 8080
  - matches:
    - path:
        type: Prefix
        value: /store-v2
    forwardTo:
    - backendRef: 
        group: net.gke.io
        kind: ServiceImport
        name: store-v2
      port: 8080
